pakeg name declear on my project

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: B2W Intitiative theme
+Theme Name: B2W Initiative Theme
 Theme URI: https://b2wi.com/
 Author: Seemol Chakroborti
 Author URI: https://github.com/wpseemol
